--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
